--- a/sass/geral.sass
+++ b/sass/geral.sass
@@ -6,4 +6,5 @@
 @import ../bower_components/breakpoint-sass/stylesheets/breakpoint
 
 @import organisms/header
+@import organisms/menu-responsivo
 @import organisms/footer
