--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -43,6 +43,20 @@ header
 					a
 						color: $branco
 						text-transform: uppercase
+						&:hover
+							color: $verde
+							+transition(.3s)
+							&:after
+								width: 60%
+								
+						&:after
+							content: ""
+							display: table
+							margin: 5px auto 0
+							width: 0%
+							height: 2px
+							background: $branco
+							+transition(.3s)
 		.social
 			margin: 0 25px 0 0
 			li
