--- a/sass/templates/_portfolio.sass
+++ b/sass/templates/_portfolio.sass
@@ -22,6 +22,9 @@ header
 						top: 0
 					a
 						+opacity(1)
+					p
+						color: $verde
+						+transition(.3s)
 						
 				img
 					+img-responsive
@@ -40,6 +43,7 @@ header
 							margin: 0
 						p
 							+font-size(18px)
+					
 					a,
 					.overlay
 						+transition(.3s)
