--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -79,10 +79,14 @@ header
 					&:hover
 						color: $verde
 					
-					
+	
+	.slide
+		padding: 140px 0
+		.slick-list
+			clear: both 		
 	h1
 		clear: both
-		margin: 200px auto  20px auto 
+		margin: 0 auto 30px
 		font-weight: $light
 		border: 3px solid $branco
 		padding: 20px
