site com correçoes

--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -1,3 +1,4 @@
+
 header
 	+clearfix
 	min-height: 500px
@@ -17,7 +18,8 @@ header
 		color: $preto
 		size: cover
 		attachment: fixed
-	
+
+
 	.logo
 		float: left
 		margin: 30px 0 0
@@ -81,12 +83,14 @@ header
 					
 	
 	.slide
-		padding: 140px 0
-		.slick-list
-			clear: both 		
+		padding: 90px 0
+		clear: both
+		h1
+			margin: 0 auto 30px
+
 	h1
 		clear: both
-		margin: 0 auto 30px
+		margin: 180px auto 30px
 		font-weight: $light
 		border: 3px solid $branco
 		padding: 20px
